nodejs-virt-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nodejs-virt
  name: nodejs-virt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-virt
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs-virt
    spec:
      containers:
      - image: virt20212container:1
        name: virt20212container
        #command: [ "/bin/sh", "-c", "env" ]
        ports:
        - containerPort: 4000
        resources: {}
      hostname: nodejs-virt
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet

status: {}
