nodejs-virt-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodejs-virt
  name: nodejs-virt
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
    name: nodejs-virt
    #nodePort: 30000
  selector:
    app: nodejs-virt
  #type: NodePort  #Manter NodePort, caso falha alterar para LoadBalance
status:
  loadBalancer: {}
